[build-system]
requires = ["setuptools>=42"]
build-backend = "setuptools.build_meta"

[project]
name = "dispatcher"
version = "0.1.0"
description = "A modular event dispatching system with builder and notification pattern."
readme = "README.md"
readme-content-type = "text/markdown"
authors = [
  { name = "Louis Goodnews" }
]
license = { text = "MIT" }
requires-python = ">=3.9"
dependencies = []
classifiers = [
  "Programming Language :: Python :: 3",
  "License :: OSI Approved :: MIT License",
  "Operating System :: OS Independent"
]

[tool.setuptools]
packages = ["dispatcher"]
py-modules = ["dispatcher"]

[tool.setuptools.packages.find]
where = ["."]
